--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "multer": "^2.0.2",
         "nodemailer": "^7.0.5",
         "prisma": "^6.13.0",
+        "resend": "^6.1.1",
         "sharp": "^0.34.3"
     }
 }
